Distinguish between build distribution and release distribution.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /Implementation/DomainTier/Build/Binaries
 /Implementation/DomainTier/Build/Distribution
 /Implementation/DomainTier/Build/Libraries
+/Implementation/DomainTier/Build/Logs
 /Implementation/DomainTier/Build/Reports
 /Implementation/DomainTier/Build/Temp/
 /Implementation/DomainTier/Build/build.num
