--- a/Implementation/DomainTier/.classpath
+++ b/Implementation/DomainTier/.classpath
@@ -4,9 +4,19 @@
 	<classpathentry kind="src" path="AcceptanceTests"/>
 	<classpathentry kind="src" path="ObjectTests"/>
 	<classpathentry kind="src" path="Configuration"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ProcessPuzzle-Production-Dependencies"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ProcessPuzzle-Development-Dependencies"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ProcessPuzzleCommons - Domain Tier"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.utility"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java7">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="Binaries"/>
 </classpath>
