--- a/Design/.project
+++ b/Design/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LiTest Models</name>
+	<name>LiTest - Models</name>
 	<comment></comment>
 	<projects>
 	</projects>
