Ignore log file and local log4j configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /Implementation/DomainTier/Build/build.num
 /Implementation/DomainTier/Build/local.build.properties
 /Implementation/DomainTier/Configuration/hsqlrun.bat
+/Implementation/DomainTier/Configuration/log4j.properties
 /Implementation/DomainTier/Configuration/toolrun.bat
 /Implementation/DomainTier/Logs/ProcessPuzzle.log
 /Implementation/WebTier/.settings
@@ -22,5 +23,6 @@
 /Implementation/WebTier/Build/Temp/
 /Implementation/WebTier/Build/build.num
 /Implementation/WebTier/Build/local.build.properties
+/Implementation/WebTier/Configuration/log4j.properties
 /Implementation/WebTier/Logs/ProcessPuzzle.log
 /Implementation/WebTier/TEST-net.jsunit.StandaloneTest.xml
