Add dependencies to pom.xml

--- a/Implementation/DomainTier/pom.xml
+++ b/Implementation/DomainTier/pom.xml
@@ -1,95 +1,73 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <groupId>com.processpuzzle</groupId>
-  <artifactId>processpuzzle-litest</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+<project 
+   xmlns="http://maven.apache.org/POM/4.0.0" 
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
+	<modelVersion>4.0.0</modelVersion>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <powermock.version>1.5.1</powermock.version>
-  </properties>
-  
-  <dependencies>
-     <dependency>
-	     <groupId>com.processpuzzle</groupId>
-		  <artifactId>processpuzzle-commons</artifactId>
-		  <version>0.1.0-SNAPSHOT</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.5</version>
-    </dependency>
-            
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>1.7.5</version>
-    </dependency>
-            
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.9.5</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-   </dependency>
-   
-   <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-   </dependency>
-       
-  </dependencies>
-  
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <inherited>true</inherited>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-          <executable>${env.JAVA_HOME}/bin/javac</executable>
-          <fork>true</fork>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	<groupId>com.processpuzzle</groupId>
+	<artifactId>processpuzzle-litest</artifactId>
+	<version>0.3.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>LiTest</name>
+	<description>Facilitates more consistent object testing, influenced by Gerard Meszaros: xUnit Patterns</description>
+	<url>http://processpuzzle.com</url>
+	<licenses>
+		<license>
+			<name>GNU General Public License as published by the Free Software Foundation</name>
+			<url>http://www.gnu.org/licenses/</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>https://github.com/ZsZs/ProcessPuzzleCommons</url>
+		<connection>https://github.com/ZsZs/ProcessPuzzleCommons</connection>
+	</scm>
+	<developers>
+		<developer>
+			<id>ZsZs</id>
+			<name>Zsolt Zsuffa</name>
+			<email>zsolt.zsuffa@gmail.com</email>
+		</developer>
+	</developers>
 
-  <distributionManagement>
-    <repository>
-      <id>bmw.next-nexus</id>
-      <name>Repository Name</name>
-      <url>http://bmwnext-build.bmwgroup.net:8000/nexus/content/repositories/releases</url>
-    </repository>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<powermock.version>1.5.1</powermock.version>
+	</properties>
 
-    <snapshotRepository>
-      <id>${server.id}</id>
-      <name>Repository Name</name>
-      <url>http://bmwnext-build.bmwgroup.net:8000/nexus/content/repositories/${snapshots}</url>
-    </snapshotRepository>
-  </distributionManagement>  
-  <name>LiTest</name>
-  <description>Facilitates more consistent object testing, influenced by Gerard Meszaros: xUnit Patterns</description>
+	<dependencies>
+		<dependency>
+			<groupId>com.processpuzzle</groupId>
+			<artifactId>processpuzzle-commons</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.4</version>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<inherited>true</inherited>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<showDeprecation>true</showDeprecation>
+					<showWarnings>true</showWarnings>
+					<executable>${env.JAVA_HOME}/bin/javac</executable>
+					<fork>true</fork>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
