--- a/Implementation/DomainTier/pom.xml
+++ b/Implementation/DomainTier/pom.xml
@@ -20,8 +20,8 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com/ZsZs/ProcessPuzzleCommons</url>
-		<connection>https://github.com/ZsZs/ProcessPuzzleCommons</connection>
+		<url>https://github.com/ZsZs/LiTest</url>
+		<connection>https://github.com/ZsZs/LiTest</connection>
 	</scm>
 	<developers>
 		<developer>
@@ -59,8 +59,8 @@
 				<version>3.1</version>
 				<inherited>true</inherited>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<showDeprecation>true</showDeprecation>
 					<showWarnings>true</showWarnings>
 					<executable>${env.JAVA_HOME}/bin/javac</executable>
