--- a/Implementation/DomainTier/.classpath
+++ b/Implementation/DomainTier/.classpath
@@ -4,8 +4,6 @@
 	<classpathentry kind="src" path="AcceptanceTests"/>
 	<classpathentry kind="src" path="ObjectTests"/>
 	<classpathentry kind="src" path="Configuration"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ProcessPuzzle-Production-Dependencies"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ProcessPuzzle-Development-Dependencies"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ProcessPuzzleCommons - Domain Tier"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
@@ -14,5 +12,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=ivy.xml&amp;confs=*&amp;ivySettingsPath=ivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivy.xml&amp;confs=*&amp;ivySettingsPath=Build%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
 	<classpathentry kind="output" path="Binaries"/>
 </classpath>
