--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /Implementation/DomainTier/Configuration/hsqlrun.bat
 /Implementation/DomainTier/Configuration/log4j.properties
 /Implementation/DomainTier/Configuration/toolrun.bat
+/Implementation/DomainTier/lib
 /Implementation/DomainTier/Logs/ProcessPuzzle.log
 /Implementation/WebTier/.settings
 /Implementation/WebTier/Binaries/
@@ -24,5 +25,6 @@
 /Implementation/WebTier/Build/build.num
 /Implementation/WebTier/Build/local.build.properties
 /Implementation/WebTier/Configuration/log4j.properties
+/Implementation/WebTier/lib
 /Implementation/WebTier/Logs/ProcessPuzzle.log
 /Implementation/WebTier/TEST-net.jsunit.StandaloneTest.xml
