Add -domain to the component name.

--- a/Implementation/DomainTier/pom.xml
+++ b/Implementation/DomainTier/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.processpuzzle</groupId>
-	<artifactId>processpuzzle-litest</artifactId>
+	<artifactId>processpuzzle-litest-domain</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>LiTest</name>
