--- a/Implementation/DomainTier/.classpath
+++ b/Implementation/DomainTier/.classpath
@@ -5,15 +5,11 @@
 	<classpathentry kind="src" path="ObjectTests"/>
 	<classpathentry kind="src" path="Configuration"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ProcessPuzzleCommons - Domain Tier"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivy.xml&amp;confs=*"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility"/>
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivy.xml&amp;confs=*&amp;ivySettingsPath=Build%2Fivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivysettings.xml&amp;confs=*"/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivy.xml&amp;confs=*"/>
 	<classpathentry kind="output" path="Binaries"/>
 </classpath>
