--- a/Implementation/DomainTier/pom.xml
+++ b/Implementation/DomainTier/pom.xml
@@ -73,10 +73,16 @@
 	</build>
 
    <distributionManagement>
+      <snapshotRepository>
+         <id>sonatype-nexus-snapshots</id>
+         <name>Nexus Snapshot Repository</name>
+         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      </snapshotRepository>
+
       <repository>
-	      <id>sonatype-nexus-snapshots</id>
-	      <name>Nexus Snapshot Repository</name>
-	      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-	    </repository>
+         <id>sonatype-nexus-staging</id>
+         <name>Nexus Staging Repository</name>
+         <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+      </repository>
    </distributionManagement>
 </project>
