--- a/Implementation/DomainTier/.classpath
+++ b/Implementation/DomainTier/.classpath
@@ -4,7 +4,11 @@
 	<classpathentry kind="src" path="AcceptanceTests"/>
 	<classpathentry kind="src" path="ObjectTests"/>
 	<classpathentry kind="src" path="Configuration"/>
-	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivy.xml&amp;confs=*"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=LiTest+-+Domain+Tier&amp;ivyXmlPath=Build%2Fivy.xml&amp;confs=*">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
